[tool.poetry]
name = "llm-serving-practice"
version = "0.1.0"
description = ""
authors = ["gw <geunwoo.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.115.6"
vllm = "^0.6.5"
uvicorn = "^0.34.0"
langchain = "^0.3.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
